--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
+// CSS Reset, comment out if not required or using a different module
+@import '~minireset.css/minireset';
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/dist/css/bootstrap-reboot.min.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap-grid.min.css";
+@import "./assets/styles/toastr";
+
